fixed alignment issues of vehicle div

--- a/src/pages/Home/homeStyles.css
+++ b/src/pages/Home/homeStyles.css
@@ -229,6 +229,12 @@
   margin-top: 3rem;
   transition: opacity 0.5s ease-out, transform 0.5s ease-out;
 }
+/* Styles for the choose cards */
+
+.homeVehicle.visible h2 {
+  animation: fadeUpAnimation 2s ease forwards;
+  z-index: 100;
+}
 
 /* Container for vehicle cards with responsive grid */
 .vehicleCards {
@@ -449,7 +455,7 @@
     margin-top: 1rem;
   }
 
-  .chooseCard, 
+  .chooseCard,
   .vehicleCard {
     width: 100%;
   }
@@ -459,15 +465,12 @@
   }
 
   .chooseCards,
-   .vehicleCards{
+  .vehicleCards {
     grid-template-columns: 1fr; /* Display only one card per row */
     padding: 1rem; /* Adjust padding for smaller screens */
   }
   .vehicleCard {
     height: auto;
-  }
-  .vehucleCard img {
-    max-height: 250px;
   }
 }
 
@@ -489,8 +492,10 @@
   }
 
   .homeWelcome,
-  .homeChoose {
+  .homeChoose,
+  .homeVehicle {
     padding: 1.7rem;
+    text-align: center;
   }
 
   .chooseCards {
